feat: Add web functionality to BestGC
- heavy code refactor/simplification