@@ -1,52 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-    <groupId>com.uio</groupId>
-    <artifactId>bestGC</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <name>bestGC</name>
-    <description>bestGC</description>
-    <properties>
-        <java.version>21</java.version>
-        <!-- <java.version>15</java.version> -->
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-<!--        dependency below is added to get available physical memory on a machine-->
-        <dependency>
-            <groupId>com.github.oshi</groupId>
-            <artifactId>oshi-core</artifactId>
-            <version>5.3.4</version>
-        </dependency>
-        <!--  &lt;!&ndash; https://mvnrepository.com/artifact/org.hyperic/sigar &ndash;&gt;
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.2.0</version>
+    <relativePath></relativePath>
+    <!-- lookup parent from repository -->
+  </parent>
+  <groupId>com.uio</groupId>
+  <artifactId>bestGC</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
+  <name>bestGC</name>
+  <description>bestGC</description>
+  <properties>
+    <java.version>21</java.version>
+    <!-- <java.version>15</java.version> -->
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <!-- <dependency> -->
+    <!--     <groupId>org.springframework.boot</groupId> -->
+    <!--     <artifactId>spring-boot-devtools</artifactId> -->
+    <!--     <scope>runtime</scope> -->
+    <!--     <optional>true</optional> -->
+    <!-- </dependency> -->
+    <!-- <dependency> -->
+    <!--     <groupId>org.projectlombok</groupId> -->
+    <!--     <artifactId>lombok</artifactId> -->
+    <!--     <optional>true</optional> -->
+    <!-- </dependency> -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <!--        dependency below is added to get available physical memory on a machine-->
+    <dependency>
+      <groupId>com.github.oshi</groupId>
+      <artifactId>oshi-core</artifactId>
+      <version>5.3.4</version>
+    </dependency>
+    <!--  &lt;!&ndash; https://mvnrepository.com/artifact/org.hyperic/sigar &ndash;&gt;
           <dependency>
               <groupId>org.hyperic</groupId>
               <artifactId>sigar</artifactId>
@@ -58,44 +57,83 @@
               <artifactId>sigar-dist</artifactId>
               <version>1.6.5.132</version>
           </dependency>-->
-
-
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.10.1</version> <!-- Or the latest version -->
-        </dependency>
-
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                        <configuration>
-                            <classifier>spring-boot</classifier>
-                            <mainClass>
-                                com.uio.bestgc.BestGcApplication
-                            </mainClass>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-
+    <!-- <dependency> -->
+    <!--   <groupId>com.google.code.gson</groupId> -->
+    <!--   <artifactId>gson</artifactId> -->
+    <!--   <version>2.10.1</version> -->
+    <!-- Or the latest version -->
+    <!-- </dependency> -->
+  </dependencies>
+  <profiles>
+    <profile>
+      <id>web</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <!--Use default value-->
+        <spring.main.web-application-type></spring.main.web-application-type>
+      </properties>
+    </profile>
+    <profile>
+      <id>console</id>
+      <properties>
+        <spring.main.web-application-type>none</spring.main.web-application-type>
+      </properties>
+    </profile>
+  </profiles>
+  <!-- <build> -->
+  <!--     <plugins> -->
+  <!--         <plugin> -->
+  <!--             <groupId>org.springframework.boot</groupId> -->
+  <!--             <artifactId>spring-boot-maven-plugin</artifactId> -->
+  <!--             <configuration> -->
+  <!--                 <excludes> -->
+  <!--                     <exclude> -->
+  <!--                         <groupId>org.projectlombok</groupId> -->
+  <!--                         <artifactId>lombok</artifactId> -->
+  <!--                     </exclude> -->
+  <!--                 </excludes> -->
+  <!--             </configuration> -->
+  <!--             <executions> -->
+  <!--                 <execution> -->
+  <!--                     <goals> -->
+  <!--                         <goal>repackage</goal> -->
+  <!--                     </goals> -->
+  <!--                     <configuration> -->
+  <!--                         <classifier>spring-boot</classifier> -->
+  <!--                         <mainClass> -->
+  <!--                             com.uio.bestgc.BestGcApplication -->
+  <!--                         </mainClass> -->
+  <!--                     </configuration> -->
+  <!--                 </execution> -->
+  <!--             </executions> -->
+  <!--         </plugin> -->
+  <!--     </plugins> -->
+  <!-- </build> -->
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <release>${java.version}</release>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
